控制点生成中线添加状态条窗口

--- a/LibCerMap/LibCerMap.csproj
+++ b/LibCerMap/LibCerMap.csproj
@@ -38,10 +38,16 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AOFunctions, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ThirdLib\AOFunctions.dll</HintPath>
+    </Reference>
+    <Reference Include="CustomizedControls">
+      <HintPath>..\ThirdLib\CustomizedControls.dll</HintPath>
     </Reference>
     <Reference Include="DevComponents.DotNetBar.Keyboard, Version=11.0.0.0, Culture=neutral, PublicKeyToken=c39c3242a43eee2b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
