--- a/CERMapping/CERMapping.csproj
+++ b/CERMapping/CERMapping.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Reference Include="DevComponents.DotNetBar.SuperGrid, Version=11.0.0.0, Culture=neutral, PublicKeyToken=c39c3242a43eee2b, processorArchitecture=MSIL">
       <HintPath>..\ThirdLib\DevComponents.DotNetBar.SuperGrid.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="DevComponents.DotNetBar2, Version=11.0.0.0, Culture=neutral, PublicKeyToken=c39c3242a43eee2b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
